STOC-34: update signup and login endpoints to use mongoDB to store and check credentials
